import decimal

import logging



logging.getLogger('sqlalchemy.engine.Engine').disabled = True  # remove for additional logging

import sqlalchemy



from sqlalchemy.sql import func  # end imports from system/genai/create_db_models_inserts/create_db_models_prefix.py

from logic_bank.logic_bank import Rule

from sqlalchemy import create_engine, Column, Integer, String, DateTime, ForeignKey, Float
from sqlalchemy.ext.declarative import declarative_base
from sqlalchemy.orm import sessionmaker
import datetime

# Create an engine and base class
engine = create_engine('sqlite:///system/genai/temp/create_db_models.sqlite')
Base = declarative_base()

class Customer(Base):
    """
    description: Table for storing customer details
    """
    __tablename__ = 'customers'
    id = Column(Integer, primary_key=True, autoincrement=True)
    first_name = Column(String(50), nullable=False)
    last_name = Column(String(50), nullable=False)
    email = Column(String(100), unique=True, nullable=False)

class Vehicle(Base):
    """
    description: Table for storing vehicle details
    """
    __tablename__ = 'vehicles'
    id = Column(Integer, primary_key=True, autoincrement=True)
    make = Column(String(50), nullable=False)
    model = Column(String(50), nullable=False)
    year = Column(Integer, nullable=False)
    price = Column(Float, nullable=False)

class Salesperson(Base):
    """
    description: Table for storing salesperson details
    """
    __tablename__ = 'salespersons'
    id = Column(Integer, primary_key=True, autoincrement=True)
    first_name = Column(String(50), nullable=False)
    last_name = Column(String(50), nullable=False)
    hire_date = Column(DateTime, default=datetime.datetime.utcnow)

class Sale(Base):
    """
    description: Table for recording vehicle sales
    """
    __tablename__ = 'sales'
    id = Column(Integer, primary_key=True, autoincrement=True)
    customer_id = Column(Integer, ForeignKey('customers.id'), nullable=False)
    vehicle_id = Column(Integer, ForeignKey('vehicles.id'), nullable=False)
    salesperson_id = Column(Integer, ForeignKey('salespersons.id'), nullable=False)
    sale_date = Column(DateTime, default=datetime.datetime.utcnow)
    sale_price = Column(Float, nullable=False)

class ServiceAppointment(Base):
    """
    description: Table for recording service appointments
    """
    __tablename__ = 'service_appointments'
    id = Column(Integer, primary_key=True, autoincrement=True)
    customer_id = Column(Integer, ForeignKey('customers.id'), nullable=False)
    vehicle_id = Column(Integer, ForeignKey('vehicles.id'), nullable=False)
    appointment_date = Column(DateTime, nullable=False)
    service_notes = Column(String(200), nullable=True)

class ServiceTechnician(Base):
    """
    description: Table for storing service technician details
    """
    __tablename__ = 'service_technicians'
    id = Column(Integer, primary_key=True, autoincrement=True)
    first_name = Column(String(50), nullable=False)
    last_name = Column(String(50), nullable=False)
    hire_date = Column(DateTime, default=datetime.datetime.utcnow)

class Service(Base):
    """
    description: Table for recording services performed
    """
    __tablename__ = 'services'
    id = Column(Integer, primary_key=True, autoincrement=True)
    service_appointment_id = Column(Integer, ForeignKey('service_appointments.id'), nullable=False)
    technician_id = Column(Integer, ForeignKey('service_technicians.id'), nullable=False)
    service_date = Column(DateTime, default=datetime.datetime.utcnow)
    service_cost = Column(Float, nullable=False)

class Supplier(Base):
    """
    description: Table for storing vehicle supplier details
    """
    __tablename__ = 'suppliers'
    id = Column(Integer, primary_key=True, autoincrement=True)
    name = Column(String(100), nullable=False)
    contact_email = Column(String(100), nullable=True)

class Inventory(Base):
    """
    description: Table for recording vehicle inventory
    """
    __tablename__ = 'inventory'
    id = Column(Integer, primary_key=True, autoincrement=True)
    vehicle_id = Column(Integer, ForeignKey('vehicles.id'), nullable=False)
    quantity = Column(Integer, default=0, nullable=False)
    supplier_id = Column(Integer, ForeignKey('suppliers.id'), nullable=False)

class Warranty(Base):
    """
    description: Table for recording vehicle warranties
    """
    __tablename__ = 'warranties'
    id = Column(Integer, primary_key=True, autoincrement=True)
    vehicle_id = Column(Integer, ForeignKey('vehicles.id'), nullable=False)
    warranty_start_date = Column(DateTime, nullable=False)
    warranty_end_date = Column(DateTime, nullable=False)

class Payment(Base):
    """
    description: Table for recording payment transactions
    """
    __tablename__ = 'payments'
    id = Column(Integer, primary_key=True, autoincrement=True)
    sale_id = Column(Integer, ForeignKey('sales.id'), nullable=False)
    payment_date = Column(DateTime, default=datetime.datetime.utcnow)
    amount = Column(Float, nullable=False)

class Insurance(Base):
    """
    description: Table for recording vehicle insurance details
    """
    __tablename__ = 'insurance'
    id = Column(Integer, primary_key=True, autoincrement=True)
    vehicle_id = Column(Integer, ForeignKey('vehicles.id'), nullable=False)
    provider_name = Column(String(100), nullable=False)
    insurance_start_date = Column(DateTime, nullable=False)
    insurance_end_date = Column(DateTime, nullable=False)

# Create the tables in the database
Base.metadata.create_all(engine)
# Create a new session
Session = sessionmaker(bind=engine)
session = Session()

# Sample data for customers
customer1 = Customer(first_name='John', last_name='Doe', email='john.doe@example.com')
customer2 = Customer(first_name='Jane', last_name='Doe', email='jane.doe@example.com')

# Sample data for vehicles
vehicle1 = Vehicle(make='Toyota', model='Camry', year=2023, price=24000.0)
vehicle2 = Vehicle(make='Honda', model='Civic', year=2022, price=22000.0)

# Sample data for salespersons
salesperson1 = Salesperson(first_name='Alice', last_name='Johnson')
salesperson2 = Salesperson(first_name='Bob', last_name='Smith')

# Sample data for sales
sale1 = Sale(customer_id=1, vehicle_id=1, salesperson_id=1, sale_price=23000.0)
sale2 = Sale(customer_id=2, vehicle_id=2, salesperson_id=2, sale_price=21500.0)

# Sample data for service appointments
appointment1 = ServiceAppointment(customer_id=1, vehicle_id=1, appointment_date=datetime.datetime(2023, 5, 20))
appointment2 = ServiceAppointment(customer_id=2, vehicle_id=2, appointment_date=datetime.datetime(2023, 6, 15))

# Sample data for service technicians
technician1 = ServiceTechnician(first_name='Charlie', last_name='Brown')
technician2 = ServiceTechnician(first_name='Dana', last_name='White')

# Sample data for services
service1 = Service(service_appointment_id=1, technician_id=1, service_cost=120.0)
service2 = Service(service_appointment_id=2, technician_id=2, service_cost=150.0)

# Sample data for suppliers
supplier1 = Supplier(name='AutoParts Co.', contact_email='sales@autoparts.com')
supplier2 = Supplier(name='Vehicle Supplies Inc.', contact_email='contact@vehiclesupplies.com')

# Sample data for inventory
inventory1 = Inventory(vehicle_id=1, quantity=10, supplier_id=1)
inventory2 = Inventory(vehicle_id=2, quantity=5, supplier_id=2)

# Sample data for warranties
warranty1 = Warranty(vehicle_id=1, warranty_start_date=datetime.datetime(2023, 1, 1), warranty_end_date=datetime.datetime(2026, 1, 1))
warranty2 = Warranty(vehicle_id=2, warranty_start_date=datetime.datetime(2023, 2, 1), warranty_end_date=datetime.datetime(2026, 2, 1))

# Sample data for payments
payment1 = Payment(sale_id=1, amount=15000.0)
payment2 = Payment(sale_id=2, amount=21000.0)

# Sample data for insurance
insurance1 = Insurance(vehicle_id=1, provider_name='SafeDrive Insurance', insurance_start_date=datetime.datetime(2023, 1, 10), insurance_end_date=datetime.datetime(2024, 1, 10))
insurance2 = Insurance(vehicle_id=2, provider_name='SecureAuto Insurances', insurance_start_date=datetime.datetime(2023, 3, 5), insurance_end_date=datetime.datetime(2024, 3, 5))

# Add all records to the session and commit
session.add_all([customer1, customer2, vehicle1, vehicle2, salesperson1, salesperson2, sale1, sale2,
                appointment1, appointment2, technician1, technician2, service1, service2,
                supplier1, supplier2, inventory1, inventory2, warranty1, warranty2,
                payment1, payment2, insurance1, insurance2])

session.commit()
session.close()
